# gorag-bot

./: .env.example  README.md  alembic.ini  bot.py  pyproject.toml  requirements-dev.txt  requirements.txt
alembic/: env.py
alembic/versions/: 6df816a585eb_initial_schema.py
locales/: en.yml  ru.yml
tests/: conftest.py  test_admin_commands.py  test_background_tasks.py  test_duplicates.py  test_i18n.py  test_join_required.py  test_links.py  test_main.py  test_permissions.py  test_punishments.py  test_router.py  test_scamlist.py  test_storage_repositories.py  test_words.py
