[project]
name = "tg-moderation-bot"
version = "0.1.0"
description = "Модульный Telegram-бот для модерации групп и супергрупп"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.4,<4.0",
    "SQLAlchemy[asyncio]>=2.0,<3.0",
    "asyncpg>=0.29,<1.0",
    "alembic>=1.13,<2.0",
    "pydantic>=2.6,<3.0",
    "pydantic-settings>=2.2,<3.0",
    "PyYAML>=6.0,<7.0",
    "structlog>=24.1,<25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<1.0",
    "aiosqlite>=0.20,<1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
